www/css/graph-styles.css
/**
 * Colour scheme from:
 * http://colorbrewer2.org/?type=diverging&scheme=RdBu&n=3
 */
.cell > .ast-additions { fill: #67a9cf; }
.cell > .ast-deletions { fill: #ef8a62; }

body:not(.colorblind-safe)
.cell > .ast-additions { fill: #a6f3a6; }
body:not(.colorblind-safe)
.cell > .ast-deletions { fill: #f8cbcb; }

.row .type-title { font-weight: bold; }

.cell .cell-outline {
    fill: none;
    stroke: #333;
    stroke-width: 1px;
}

svg.main-figure {
    /* A little margin at the bottom to make room for the floating axis. */
    margin-bottom: 3em;
}

/* Have this stick to the bottom. */
svg.time-axis {
    position: fixed;
    bottom: 0;
    height: 3em;

    background-color: rgba(255, 255, 255, 0.9);
}

/* Make the tick labels for years bold. */
.time-axis text.year-tick {
    font-weight: bold;
    font-size: larger;
}

